[package]
name = "shogun-task"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shogun_task"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.29.0"
solana-program = ">=1.16, <1.18"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"
num_enum = "=0.7.0"
ahash = "=0.8.6"
anchor-spl = "=0.29.0"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "cpi",
] }
